:hammer: 完善 gitingore 和 native 文档